@@ -1,3 +1,8 @@
+2001-05-18  Ion Badulescu  <ionut@moisil.dev.hydraweb.com>
+
+	* amd/amfs_host.c (amfs_host_mount): don't fail the mount if at
+	least one share is already mounted
+
 2001-05-17  Ion Badulescu  <ionut@moisil.dev.hydraweb.com>
 
 	* libamu/util.c (str3cat): updated comment
